Fix webkit scrollbars (#7191)
* Revert "Make scroll bars wider (#7060)"

This reverts commit 11715454d033784bf6176b75a954e5c28b5d79e5.

* for real make webkit scrollbar wider

--- a/app/javascript/styles/mastodon/reset.scss
+++ b/app/javascript/styles/mastodon/reset.scss
@@ -53,6 +53,11 @@ table {
   border-spacing: 0;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
 ::-webkit-scrollbar-thumb {
   background: lighten($ui-base-color, 4%);
   border: 0px none $base-border-color;
